--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@ body,
 
 .titlebar {
   height: 30px;
-  background: none;
+  background: rgba(255, 255, 255, 0.8);
   user-select: none;
   display: flex;
   justify-content: flex-end;
@@ -92,6 +92,7 @@ body,
   top: 0;
   left: 0;
   right: 0;
+  z-index: 2;
 }
 
 .titlebar-button {
@@ -235,10 +236,10 @@ p:after {
   width: 100%;
 }
 
-span {
+/* span {
   color: #fff;
   font-weight: bold;
-}
+} */
 
 .line1 {
   color: #9CD9F0;
