--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,8 @@ body,
 
 .titlebar {
   height: 30px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(2px);
   user-select: none;
   display: flex;
   justify-content: flex-end;
@@ -149,58 +150,45 @@ body,
   }
 }
 
-/* 
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans:300");
-
-.terminal,
-.terminal:before,
-.terminal:after,
-p:after {
-  position: relative;
+  
+.mobile-phone {
+  margin: auto;
+  margin-top: 40px;
+  padding: 10px 10px 20px;
+  width: 300px;
+  height: 600px;
+  box-shadow: 0 0 20px #e2e2e2;
+  border-radius: 30px;
+  background-color: #000;
 }
 
-.terminal {
+.screen {
   width: 100%;
-  height: 550px;
-  margin-top: 10px;
-  padding: 20px;
-  border-radius: 5px;
-  padding: 26px 4px 4px;
-  border-radius: 5px;
-  background: linear-gradient(#f6f6f6, #d3d3d3 20px, #7e7e7e 20px, #7e7e7e 21px, #393456 21px);
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
-  transition: all 0.5s ease;
+  height: 100%;
+  background: #f2f2f2;
+  border-radius: 30px;
+  overflow-y: auto;
 }
 
-.terminal:before {
-  content: " ";
-  width: 10px;
-  height: 10px;
-  margin: -20px 0 0 5px;
-  border-radius: 5px;
-  background: #fc625d;
-  box-shadow: 0 0 0 1px #de413e, 15px 0 #fec041, 15px 0 0 1px #dda035, 30px 0 #35cc4b, 30px 0 0 1px #28aa36;
+.brove {
+  width: 150px;
+  height: 20px;
+  background: white;
+  position: absolute;
+  margin: 0 100px;
+  border-radius: 0 0 20px 20px;
 }
 
-.terminal:after {
-  width: 100%;
-  content: "Pure CSS Terminal";
-  top: 0;
-  text-align: center;
-  color: #4c4c4c;
-  line-height: 20px;
-} 
-
-.terminal p {
-  color: #fff;
+.speaker {
+  width: 60px;
+  height: 5px;
+  background: #d2d2d2;
+  display: block;
+  margin: auto;
+  margin-top: 5px;
+  border-radius: 20px;
 }
 
-.terminal p:before {
-  content: "$";
-  margin-right: 8px;
-  opacity: 0.5;
-  line-height: 18px;
-} */
 
 .fakeScreen {
   background-color: #151515;
