--- a/app/globals.css
+++ b/app/globals.css
@@ -199,6 +199,8 @@ body,
   margin-top: 10px;
   padding: 20px;
   border-radius: 5px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
@@ -215,8 +217,6 @@ body,
 
 .fakeScreen p {
   position: relative;
-  /* left: 50%;
-  margin-left: -8.5em; */
   text-align: left;
   font-size: 1.25em;
   font-family: monospace;
