--- a/app/globals.css
+++ b/app/globals.css
@@ -195,7 +195,7 @@ body,
   background-color: #151515;
   box-sizing: border-box;
   width: 100%;
-  height: 600px;
+  height: 500px; /* Default height */
   margin-top: 10px;
   padding: 20px;
   border-radius: 5px;
@@ -209,6 +209,27 @@ body,
   -ms-scroll-snap-type: y proximity;
   scroll-snap-type: y proximity;
   border: 2px solid black;
+}
+
+/* Adjust height for smaller screens */
+@media (max-width: 768px) {
+  .fakeScreen {
+    height: 400px; /* Smaller height for medium-sized screens */
+  }
+}
+
+/* Adjust height for extra small screens */
+@media (max-width: 480px) {
+  .fakeScreen {
+    height: 300px; /* Smaller height for small screens */
+  }
+}
+
+/* Adjust height for larger screens */
+@media (min-width: 1024px) {
+  .fakeScreen {
+    height: 900px; /* Larger height for larger screens */
+  }
 }
 
 #snap {
